; ModuleID = '/home/carl/AnghaBench/libgit2/tests/network/remote/extr_local.c_test_network_remote_local__retrieve_advertised_references_from_spaced_repository.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/network/remote/extr_local.c_test_network_remote_local__retrieve_advertised_references_from_spaced_repository.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"testrepo.git\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"spaced testrepo.git\00", align 1
@remote = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_network_remote_local__retrieve_advertised_references_from_spaced_repository() #0 {
  %1 = alloca i32**, align 8
  %2 = alloca i64, align 8
  %3 = call i32 @cl_fixture_sandbox(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @p_rename(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = call i32 @connect_to_local_repository(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  %7 = load i32*, i32** @remote, align 8
  %8 = call i32 @git_remote_ls(i32*** %1, i64* %2, i32* %7)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i64, i64* %2, align 8
  %11 = call i32 @cl_assert_equal_i(i64 %10, i32 29)
  %12 = load i32*, i32** @remote, align 8
  %13 = call i32 @git_remote_free(i32* %12)
  store i32* null, i32** @remote, align 8
  %14 = call i32 @cl_fixture_cleanup(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @cl_fixture_sandbox(i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @p_rename(i8*, i8*) #1

declare dso_local i32 @connect_to_local_repository(i8*) #1

declare dso_local i32 @git_remote_ls(i32***, i64*, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i64, i32) #1

declare dso_local i32 @git_remote_free(i32*) #1

declare dso_local i32 @cl_fixture_cleanup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
